# plink

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  blox.cpp~  config.h.in  configure.ac  epi.cpp  haplowindow.h  input.cpp  model.cpp  model.h  options.cpp  options.h  phase.h  plink.h  plinklibhandler.cpp  plinklibhandler.h  webcheck.cpp~  zed.cpp  zed.h
